--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    ">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    " alt="Lion Picture">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    " alt="Lion Picure" title="favorite animal">
+    
   </body>
 </html>
+
